# mcp-media-library-manager

./: Dockerfile  MAINTAINERS.md  README.md  config.toml.example  docker-compose.yml  project.env  pyproject.toml
.claude/rules/: apply-project-config.md  readme-docker-compose.md  repository-overview.md
.github/workflows/: ci.yml
dockerhub/: repository-overview-copy.md
docs/software-development-lifecycle/: requirements.md  work_plan (1).md  work_plan.md
scripts/: apply-project-config.sh  run-quality-gates.sh
src/mcp_media_library_manager/: __main__.py  config.py  ingest_queue.py  library_paths.py  server.py  tools.py
tests/unit/: test_config.py  test_ingest_queue.py  test_library_paths.py  test_logging.py  test_server.py  test_tools.py
