[project]
name = "mcp-media-library-manager"
version = "0.1.0"
description = "An MCP server for managing file operations of a media library"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0",
]

[project.scripts]
mcp-media-library-manager = "mcp_media_library_manager.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_media_library_manager"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.11",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
packages = ["mcp_media_library_manager"]
